--- a/cpflweb/src/app/form-operador/form-operador.component.html
+++ b/cpflweb/src/app/form-operador/form-operador.component.html
@@ -16,7 +16,7 @@
             <input type="text" class="form-control" id="login" required [(ngModel)]="operador.login" name="login">
         </div>
 
-        <button type="submit" class="btn btn-success">Submit</button>
+        <button type="submit" class="btn btn-success">Salvar</button>
     </form>
 </div>
 
